# MarketView

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  maket_analyst_logic.md  pyproject.toml
.claude/: settings.local.json
dashboard/: __init__.py  api_client.py  app.py
dashboard/pages/: 1_Market_Data.py  2_Generate_Report.py  4_Report_History.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChartCard.tsx  Layout.tsx  MetricCard.tsx  RefreshBar.tsx  StatusBadge.tsx
frontend/src/context/: DataSourceContext.tsx  RefreshContext.tsx
frontend/src/hooks/: useAutoRefresh.ts
frontend/src/pages/: Dashboard.tsx  DataSources.tsx  Health.tsx  MarketData.tsx  RedditFeed.tsx  Reports.tsx
src/: __init__.py
src/analysis/: __init__.py  correlation_engine.py  macro_analyzer.py  regime_detector.py  technical_analyzer.py
src/api/: auth.py  main.py
src/api/routers/: __init__.py  data.py  health.py  market.py  reddit.py  reports.py  sources.py  templates.py
src/config/: __init__.py  constants.py  settings.py
src/data/: mock_data.py
src/ingestion/: __init__.py  aggregator.py  base.py  rate_limiter.py
src/llm/: client.py  enhancer.py  prompts.py
src/reports/: __init__.py  builder.py  models.py  research_context.py
src/storage/: __init__.py  models.py  repository.py
src/tasks/: __init__.py  celery_app.py  data_tasks.py  report_tasks.py
tests/: __init__.py  conftest.py  test_formatters.py  test_rate_limiter.py  test_report_models.py  test_technical_analyzer.py
(+25 files in other folders)
