[tool.poetry]
name = "marketview"
version = "1.0.0"
description = "Institutional-grade Market Analysis System generating Daily Alpha Briefs"
authors = ["MarketView Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
streamlit = "^1.30.0"
fredapi = "^0.5.1"
praw = "^7.7.1"
pycoingecko = "^3.1.0"
yfinance = "^0.2.36"
pandas = "^2.1.4"
numpy = "^1.26.3"
scipy = "^1.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
redis = "^5.0.1"
celery = {extras = ["redis"], version = "^5.3.6"}
weasyprint = "^61.0"
jinja2 = "^3.1.3"
httpx = "^0.26.0"
aiohttp = "^3.9.1"
python-dotenv = "^1.0.0"
plotly = "^5.18.0"
ta = "^0.11.0"
chromadb = ">=0.5"
openai = ">=1.0"
pypdf = ">=4.0"
python-multipart = ">=0.0.6"
sentence-transformers = ">=3.0"
google-genai = ">=1.0"
anthropic = ">=0.40"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
